# PyCAD

./: .gitignore  CMakeLists.txt  README.md  test  test2
doc/: py.txt  test.txt
res/shaders/: standard.vert
src/: CADViewer.cpp  CADViewer.h  Discrete_Shape.cpp  Discrete_Shape.h  IOHandler.h  OCCGeometry.cpp  OCCGeometry.h  PCBView.cpp  PCBView.h  PyBindingFunctions.h  PySharing.cpp  PySharing.h  PythonConsole.cpp  PythonConsole.h  PythonConsole.ui  main.cpp  mainwindow.cpp  mainwindow.h
vs/PCB3D_1/: PCB3D_1.sln  test.txt
vs/PCB3D_1/PCB3D_1/: IOHandler.h  OCCGeometry.cpp  OCCGeometry.h  PCB3D_1.cpp  PCB3D_1.h  PCB3D_1.qrc  PCB3D_1.ui  PCB3D_1.vcxproj  PCB3D_1.vcxproj.filters  PCBView.cpp  PCBView.h  PyBindingFunctions.h  PySharing.h  PythonConsole.cpp  PythonConsole.h  main.cpp
vs/PCB3D_1/res/shaders/: standard_phong.frag
